Fix the sorting arrow icon not being vertically aligned

--- a/client/app/tables/datatable/datatable.component.scss
+++ b/client/app/tables/datatable/datatable.component.scss
@@ -66,3 +66,8 @@ constraint-icons {
   text-align: center;
   color: rgba(0, 0, 0, 0.54);
 }
+
+.mat-sort-header-container {
+  // For the sorting arrow
+  align-items: center;
+}
